--- a/NZWalks.UI/Views/Regions/Add.cshtml
+++ b/NZWalks.UI/Views/Regions/Add.cshtml
@@ -1,20 +1,22 @@
-﻿@{
+﻿@model NZWalks.UI.Models.AddRegionViewModel
+@{
 }
 
 <h1 class="mt-3">
-    Hello
+    Add Region
+</h1>
     <form method="post">
         <div class="mt-3">
             <label class="form-label">Code</label>
-            <input type="text" name="code" class="form-control" />
+            <input type="text" name="code" class="form-control" asp-for="Code" />
         </div>
         <div class="mt-3">
             <label class="form-label">Name</label>
-            <input type="text" name="name" class="form-control" />
+            <input type="text" name="name" class="form-control" asp-for="Name"/>
         </div>
         <div class="mt-3">
             <label class="form-label">Image URL</label>
-            <input type="text" name="imageUrl" class="form-control" />
+            <input type="text" name="imageUrl" class="form-control" asp-for="RegionImageUrl"/>
         </div>
 
         <div class="mt-3">
@@ -22,4 +24,3 @@
         </div>
 
     </form>
-</h1>
