--- a/NZWalks.UI/Views/Regions/Index.cshtml
+++ b/NZWalks.UI/Views/Regions/Index.cshtml
@@ -3,16 +3,13 @@
 @{
 }
 
-
 <h1 class="mt-3">Regions</h1>
-<div class="d-flex justify-content-end">
-    <a class="btn btn-secondary" 
-    asp-controller="Regions"
-    asp-action="Add"
-    >Add Region</a>
 
+<div class="d-flex justify-content-end">
+    <a class="btn btn-secondary" asp-controller="Regions" asp-action="Add">Add Region</a>
 </div>
-<table>
+
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>Id</th>
@@ -22,12 +19,16 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var region in Model)
+        @foreach (var walk in Model)
         {
             <tr>
-                <td>@region.Id</td>
-                <td>@region.Code</td>
-                <td>@region.Name</td>
+                <td>@walk.Id</td>
+                <td>@walk.Code</td>
+                <td>@walk.Name</td>
+                <td>
+                    <a asp-controller="Regions" asp-action="Edit" asp-route-id="@walk.Id"
+                       class="btn btn-light">Edit</a>
+                </td>
             </tr>
         }
     </tbody>
